--- a/config/go.d.conf
+++ b/config/go.d.conf
@@ -30,6 +30,7 @@ modules:
 #  docker_engine: yes
 #  dockerhub: yes
 #  elasticsearch: yes
+#  erigon: yes
 #  example: no
 #  filecheck: yes
 #  fluentd: yes
