--- a/config/go.d/prometheus.conf
+++ b/config/go.d/prometheus.conf
@@ -1553,3 +1553,8 @@ jobs:
   - name: besu_local
     url: '127.0.0.1:9545'
     expected_prefix: 'besu_'
+  # Run Erigon with --metrics flag.
+  # Docs: https://github.com/ledgerwatch/erigon/blob/devel/cmd/prometheus/Readme.md
+  - name: erigon_local
+    url: 'http://127.0.0.1:6060/debug/metrics/prometheus'
+    expected_prefix: 'sync'
